--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
     <div class="the_blach_hover">
     </div>
-
-    <a-scene id="the_scene" the_scene cursor="rayOrigin: mouse">
+    <a-scene id="the_scene" the_scene cursor="rayOrigin: mouse"
+        loading-screen="dotsColor:black; backgroundColor: #f1f1f1 ">
         <a-assets>
             <img id="Arrow-1" src="./Style/Images/PNG/Arrow-1.png">
             <img id="Scene-0" src="./Style/Images/Scene-0.jpg">
@@ -68,7 +68,6 @@
             <img id="Scene-24" src="./Style/Images/Scene-24.jpg">
             <img id="Scene-25" src="./Style/Images/Scene-25.jpg">
             <img id="Scene-26" src="./Style/Images/Scene-26.jpg">
-
         </a-assets>
 
         <a-entity laser-controls="hand: left"
