--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
     <div class="the_description">
         Villa Bamba Ba
     </div>
+    <div class='hover_loader_container'>
+        <div class='hover_loader'>
+            <div class="lds-ellipsis">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </div>
+    <a class="link_to_archviz" href="https://archviz-dakar.com/" target="_blank">
+    </a>
 
     <div class="The_Image_Back_Cover">
     </div>
@@ -587,10 +599,14 @@
         <!-- ############################################################ -->
     </a-scene>
     <script>
+        let loaderContainer = document.querySelector('.hover_loader_container')
+
         let groups = document.querySelectorAll('.groups')
         let the_sky = document.querySelector('#image-360')
         let the_cursor = document.querySelector('.a-mouse-cursor-hover')
         let theBlachHover = document.querySelector('.the_blach_hover')
+        let img_1 = document.querySelector('#Scene-0')
+
 
         AFRAME.registerComponent('the_dote', {
             schema: { Name_of_dote: { type: 'string', default: '#Name', }, Group_to_activate: { type: 'string', default: '#Position', }, The_rotation: { type: 'string', default: '0', } },
@@ -716,6 +732,17 @@
                 });
             }
         });
+        const theInt = setInterval(intFunc, 4000)
+
+        function intFunc() {
+            if (img_1.complete) {
+                loaderContainer.style.display = "none"
+                console.log(img_1.complete);
+                clearInterval(theInt);
+            } else {
+                console.log(img_1.complete);
+            }
+        }
     </script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
